--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,7 +1,7 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-streamlit
-joblib
-skops
+pandas>=1.5
+numpy>=1.21
+scikit-learn>=1.3
+matplotlib>=3.7
+streamlit>=1.30
+joblib>=1.2
+skops>=0.6
