--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,7 +1,7 @@
-pandas>=1.5
-numpy>=1.21
-scikit-learn>=1.3
+pandas
+numpy
+scikit-learn
 matplotlib>=3.7
-streamlit>=1.30
-joblib>=1.2
-skops>=0.6
+streamlit
+joblib
+skops
