--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,6 @@ jobs:
 
       - name: Update branch
         env:
-          USER_NAME: ${{ secrets.USER_NAME }}
-          USER_EMAIL: ${{ secrets.USER_EMAIL }}
+          USER_NAME: ${{ secrets.GIT_USERNAME }}
+          USER_EMAIL: ${{ secrets.GIT_EMAIL }}
         run: make update-branch USER_NAME=$USER_NAME USER_EMAIL=$USER_EMAIL
